force-app/main/default/objects/Localidad__c/Localidad__c.object-meta.xml
<CustomObject>
    <label>Localidad</label>
    <nameField>
        <displayFormat>Loc-{0000}</displayFormat>
        <label>Nro. Localidad</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Localidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>