force-app/main/default/objects/Localidad__c/fields/CIU__c.field-meta.xml
<CustomField>
    <fullName>CIU__c</fullName>
    <label>CIU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>