force-app/main/default/objects/Localidad__c/fields/Codigo_de_Provincia__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Provincia__c</fullName>
    <label>Código de Provincia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>