force-app/main/default/objects/Localidad__c/fields/Loc_Id__c.field-meta.xml
<CustomField>
    <fullName>Loc_Id__c</fullName>
    <externalId>true</externalId>
    <label>Loc Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>