force-app/main/default/objects/Localidad__c/fields/Localidad_Id__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Id__c</fullName>
    <externalId>true</externalId>
    <label>Localidad Id.</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>