force-app/main/default/objects/Localidad__c/fields/Localidad_Valida__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Valida__c</fullName>
    <label>Localidad Válida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>