force-app/main/default/objects/Localidad__c/fields/Nombre_de_Localidad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Localidad__c</fullName>
    <label>Nombre de Localidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>