force-app/main/default/objects/Localidad__c/fields/Nombre_de_Provincia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Provincia__c</fullName>
    <description>Campo Fórmula para identificar los Nombres de las Provincias con el Código de Provincia</description>
    <formula>IF( Codigo_de_Provincia__c = &apos;B&apos;, &apos;Buenos Aires&apos;,
IF( Codigo_de_Provincia__c = &apos;K&apos;, &apos;Catamarca&apos;,
IF( Codigo_de_Provincia__c = &apos;H&apos;, &apos;Chaco&apos;,
IF( Codigo_de_Provincia__c = &apos;U&apos;, &apos;Chubut&apos;,
IF( Codigo_de_Provincia__c = &apos;C&apos;, &apos;Ciudad Autónoma de Buenos Aires&apos;,
IF( Codigo_de_Provincia__c = &apos;X&apos;, &apos;Córdoba&apos;,
IF( Codigo_de_Provincia__c = &apos;W&apos;, &apos;Corrientes&apos;,
IF( Codigo_de_Provincia__c = &apos;E&apos;, &apos;Entre Rios&apos;,
IF( Codigo_de_Provincia__c = &apos;P&apos;, &apos;Formosa&apos;,
IF( Codigo_de_Provincia__c = &apos;Y&apos;, &apos;Jujuy&apos;,
IF( Codigo_de_Provincia__c = &apos;L&apos;, &apos;La Pampa&apos;,
IF( Codigo_de_Provincia__c = &apos;F&apos;, &apos;La Rioja&apos;,
IF( Codigo_de_Provincia__c = &apos;M&apos;, &apos;Mendoza&apos;,
IF( Codigo_de_Provincia__c = &apos;N&apos;, &apos;Misiones&apos;,
IF( Codigo_de_Provincia__c = &apos;Q&apos;, &apos;Neuquén&apos;,
IF( Codigo_de_Provincia__c = &apos;R&apos;, &apos;Río Negro&apos;,
IF( Codigo_de_Provincia__c = &apos;A&apos;, &apos;Salta&apos;,
IF( Codigo_de_Provincia__c = &apos;J&apos;, &apos;San Juan&apos;,
IF( Codigo_de_Provincia__c = &apos;D&apos;, &apos;San Luis&apos;,
IF( Codigo_de_Provincia__c = &apos;S&apos;, &apos;Santa Fe&apos;,
IF( Codigo_de_Provincia__c = &apos;G&apos;, &apos;Santiago del Estero&apos;,
IF( Codigo_de_Provincia__c = &apos;V&apos;, &apos;Tierra del Fuego&apos;,
IF( Codigo_de_Provincia__c = &apos;T&apos;, &apos;Tucumán&apos;,
&apos;Código de Provincia no Identificada&apos;
)))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de Provincia</label>
    <type>Text</type>
</CustomField>