force-app/main/default/objects/Localidad__c/fields/Organizador_lookup__c.field-meta.xml
<CustomField>
    <fullName>Organizador_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organizador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Localidades</relationshipName>
    <type>Lookup</type>
</CustomField>