force-app/main/default/objects/Localidad__c/fields/Prefijo__c.field-meta.xml
<CustomField>
    <fullName>Prefijo__c</fullName>
    <label>Prefijo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>