force-app/main/default/objects/Localidad__c/fields/ZG_Codigo__c.field-meta.xml
<CustomField>
    <fullName>ZG_Codigo__c</fullName>
    <label>ZG Código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>