force-app/main/default/objects/Localidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organizador_lookup__c</columns>
    <columns>Loc_Id__c</columns>
    <columns>Nombre_de_Localidad__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>