force-app/main/default/objects/Localidad__c/listViews/Localidades_con_LOC_ID_y_OR.listView-meta.xml
<ListView>
    <fullName>Localidades_con_LOC_ID_y_OR</fullName>
    <columns>Nombre_de_Localidad__c</columns>
    <columns>NAME</columns>
    <columns>Loc_Id__c</columns>
    <columns>ZG_Codigo__c</columns>
    <columns>Organizador_lookup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loc_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Organizador_lookup__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Localidades con LOC ID y OR</label>
</ListView>